syntax = "proto3";

package engineering.helloworld;

option go_package = "egounittest/protos/helloworld";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // 未知类型
  // @code=UNKNOWN
  RESOURCE_ERR_UNKNOWN = 0;
  // 找不到资源
  // @code=NOT_FOUND
  RESOURCE_ERR_NOT_FOUND = 1;
  // 获取列表数据出错
  // @code=INTERNAL
  RESOURCE_ERR_LIST_MYSQL = 2;
  // 获取详情数据出错
  // @code=INTERNAL
  RESOURCE_ERR_INFO_MYSQL = 3;
}
